--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -21,12 +21,11 @@ import { Icon } from "astro-icon";
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Marketing website done with Astro
+      Learnable
     </h1>
     <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly create
-      any website with this starter.
+      Learnable is a platform from all walks of lives to share free learning resources. <wbr /> 
+      We believe knowledge should be free, don't hesitate to join our community.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
