--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -38,8 +38,8 @@ const menuitems = [
     <Astronav>
       <div class="flex w-full lg:w-auto items-center justify-between">
         <a href="/" class="text-lg"
-          ><span class="font-bold text-slate-800">Astro</span><span
-            class="text-slate-500">ship</span
+          ><span class="font-bold text-slate-800">Learn</span><span
+            class="text-slate-500">able</span
           >
         </a>
         <div class="block lg:hidden">
@@ -80,8 +80,8 @@ const menuitems = [
     </Astronav>
     <div>
       <div class="hidden lg:flex items-center gap-4">
-        <a href="#">Log in</a>
-        <Link href="#" size="md">Sign up</Link>
+        <a href="/login">Log in</a>
+        <Link href="/signup" size="md">Sign up</Link>
       </div>
     </div>
   </header>
